# slam-toolkit

./: .gitmodules  CMakeLists.txt  README.md
config/: kitti.yaml  unittest.yaml
examples/epip_cluster/: CMakeLists.txt
examples/epip_cluster/include/: tracker.h
examples/epip_cluster/scripts/: kmean.py  line.py
examples/epip_cluster/src/: tracker.cpp  tracker_main.cpp
examples/kitti/: CMakeLists.txt
examples/kitti/src/: main.cpp
examples/segmentation/: CMakeLists.txt
examples/segmentation/include/: seg.h  util.h
examples/segmentation/src/: main.cpp  seg.cpp  util.cpp  watershed.cpp
include/: camera.h  dataset.h  frame.h  loopdetector.h  pipeline.h  pipeline_map.h  posetracker.h  qmap_viewer.h  stdafx.h
old_examples/epip_cluster/include/: util.h
old_examples/epip_cluster/scripts/: calib.py
pipeline/: CMakeLists.txt
pipeline/examples/kitti/src/: main.cpp
pipeline/include/: ORBVocabulary.h  camera.h  common.h  dataset.h  epipolar_cluster.h  localmapper.h  loopcloser.h  mappoint.h  matcher.h  method.h  optimizer.h  orb_extractor.h  pipeline.h  posetracker.h
pipeline/src/: camera.cpp  dataset.cpp  frame.cpp  localmapper.cpp  loopdetector.cpp  orb_extractor.cpp  pipeline.cpp  pipeline_map.cpp  posetracker.cpp  qmap_viewer.cpp
segmentation/: CMakeLists.txt  batch.sh  run.sh
segmentation/config/: kitti_tracking.yaml
segmentation/include/: floorseg.h  g2o_types.h  occlusion_seg.h  optimizer.h  seg.h  seg_dataset.h  seg_viewer.h  segslam.h  stdafx.h  util.h
segmentation/kitti_tracking_tool/: kitti_tracking_dataset.py
segmentation/kitti_tracking_tool_old/: global_viewer.py
segmentation/kitti_tracking_tool_old/dataset/: kitti_data_base.py
segmentation/kitti_tracking_tool_old/viewer/: box_op.py  viewer.py
segmentation/kitti_tracking_tools/: __init__.py  global_viewer.py  kitti_tracking_parser.py  readme.txt  visualize.py
segmentation/kitti_tracking_tools/dataset/: kitti_data_base.py  kitti_dataset.py
segmentation/kitti_tracking_tools/viewer/: box_op.py  color_map.py
segmentation/others/: README.md
segmentation/scripts/: eval.py  track_eval.py  util.py
segmentation/src/: edge.cpp  extractor.cpp  filter.cpp  floorseg.cpp  g2o_types.cpp  main.cpp  matcher.cpp  occlusion_seg.cpp  old_seg.cpp  optimizer.cpp  optmizer.cpp  ransac.cpp  seg.cpp  seg_dataset.cpp  seg_viewer.cpp  segslam.cpp  segslam_new.cpp  util.cpp  visualize.cpp  watershed.cpp
segmentation/tum_rgbd_benchmark_tools/: converter.py  kittiodom_evaluate_ate.py  kittiodom_evaluate_rpe.py
src/: camera.cpp  common.cpp  dataset.cpp  frame.cpp  loopcloser.cpp  mappoint.cpp  matcher.cpp  method.cpp  optimizer.cpp  pipeline.cpp  posetracker.cpp
stereo_seg/: CMakeLists.txt
stereo_seg/hitnet/: hitnet.py
stereo_seg/include/: hitnet.h  simd.h
stereo_seg/models/: download_eth.sh
stereo_seg/src/: hitnet.cpp  main.cpp  simd.cpp  test_fasterseg.cpp  test_hitnet.cpp  watershed.cpp
